--- a/RMISWeb/RDL_BagPaymentReport.rdlc
+++ b/RMISWeb/RDL_BagPaymentReport.rdlc
@@ -186,7 +186,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox9</rd:DefaultName>
@@ -345,7 +347,9 @@
                               <Style />
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>PaymentMode</rd:DefaultName>
@@ -428,7 +432,11 @@
       </Tablix>
     </ReportItems>
     <Height>3.31667in</Height>
-    <Style />
+    <Style>
+      <Border>
+        <Style>None</Style>
+      </Border>
+    </Style>
   </Body>
   <Width>11.55917in</Width>
   <Page>
